--- a/index.html
+++ b/index.html
@@ -32,20 +32,9 @@
       }
     }
   </script>
-<script type="importmap">
-{
-  "imports": {
-    "react": "https://esm.sh/react@^19.1.0",
-    "react/": "https://esm.sh/react@^19.1.0/",
-    "react-dom/": "https://esm.sh/react-dom@^19.1.0/"
-  }
-}
-</script>
 </head>
 <body class="bg-slate-900 text-slate-100 antialiased">
-  <div id="root"></div>
-  <script type="module" src="/index.tsx"></script>
+  <div id="app"></div>
+  <script type="module" src="/main.ts"></script>
 </body>
 </html>
-<link rel="stylesheet" href="index.css">
-<script src="index.tsx" type="module"></script>
