--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
       theme: {
         extend: {
           colors: {
+            primary: '#161b27',
+            transparentbg: 'rgba(17,20,28,0.8)',
             sky: {
               400: '#38bdf8',
               500: '#0ea5e9',
@@ -33,7 +35,7 @@
     }
   </script>
 </head>
-<body class="bg-slate-900 text-slate-100 antialiased">
+<body class="bg-primary text-slate-100 antialiased">
   <div id="app"></div>
   <script type="module" src="/main.ts"></script>
 </body>
